--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ header {
 }
 
 /* Títulos */
-.descripcion h2 {
+.descripcion h2, h3{
     color: #333;
     margin-bottom: 15px;
     font-size: 1.8rem;
@@ -204,6 +204,7 @@ header {
     border: none;
 }
 
+/*No esta activa ya*/
 .galeria {
     flex: 1;
     background: white;
@@ -212,12 +213,13 @@ header {
     box-shadow: 0 2px 5px rgba(37, 99, 235, 0.2);
     min-width: 250px;
 }
+/*No esta activa ya*/ 
 
 .imagenes {
     display: flex;
     gap: 0.5rem;
     flex-wrap: wrap;
-    margin-top: 0.5rem;
+    margin-top: 1.0rem;
 }
 
 .imagenes img {
@@ -225,6 +227,12 @@ header {
     border-radius: 6px;
     transition: transform 0.3s ease;
 }
+/*Agrega un estilo a las imagenes de zoom cuando pasa el mouse*/
+.imagenes img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
 
 /*Diseño para el perfil*/
 
