--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@ body.modo-oscuro .menu-lateral {
 }
 
 body.modo-oscuro .menu-lateral a {
-    color: #60a5fa;
+    color: #70d6ff;
 }
 
 body.modo-oscuro .descripcion,
@@ -548,14 +548,14 @@ body.modo-oscuro #modo-toggle {
 body.modo-oscuro .contenido-principal-Perfil,
 body.modo-oscuro .perfil {
     background-color: #1e1e1e;
-    color: #f5f5f5;
+    color: #70d6ff;
     box-shadow: 0 4px 15px rgba(96, 165, 250, 0.3);
 }
 
 /* FORMULARIO en modo oscuro */
 body.modo-oscuro .contenido-principal-formulario {
     background-color: #1e1e1e;
-    color: #f5f5f5;
+    color: #70d6ff;
     border: 1px solid #444;
     box-shadow: 0 4px 15px rgba(96, 165, 250, 0.3);
 }
@@ -569,7 +569,7 @@ body.modo-oscuro textarea {
 }
 
 body.modo-oscuro label {
-    color: #60a5fa;
+    color: #70d6ff;
 }
 
 /* PROYECTOS en modo oscuro */
@@ -582,7 +582,7 @@ body.modo-oscuro .proyectos {
 
 body.modo-oscuro .proyecto {
     background-color: #2a2a2a;
-    color: #f5f5f5;
+    color: #70d6ff;
     border: 1px solid #444;
 }
 
