Mejoré la interfaz con el modo oscuro, colores diferentes

--- a/style.css
+++ b/style.css
@@ -512,18 +512,27 @@ body.modo-oscuro {
     color: #f5f5f5;
 }
 
+body.modo-oscuro h2, 
+body.modo-oscuro h3,
+body.modo-oscuro p,
+body.modo-oscuro li {
+    color: #70d6ff;
+}
+
+
 body.modo-oscuro header,
 body.modo-oscuro footer,
 body.modo-oscuro .proyectos {
     background-color: #1e1e1e;
-    color: #f5f5f5;
+    color: #70d6ff;
 }
 
 body.modo-oscuro .menu-lateral {
     background-color: #1e1e1e;
 }
 
-body.modo-oscuro .menu-lateral a {
+body.modo-oscuro .menu-lateral a,
+body.modo-oscuro .menu-superior a{
     color: #70d6ff;
 }
 
