--- a/style.css
+++ b/style.css
@@ -512,14 +512,32 @@ body.modo-oscuro {
     color: #f5f5f5;
 }
 
-body.modo-oscuro h2, 
-body.modo-oscuro h3,
-body.modo-oscuro p,
-body.modo-oscuro li, 
 body.modo-oscuro a{
-    color: #70d6ff;
+    color: #90e0ef;
 }
 
+
+body.modo-oscuro h1,
+body.modo-oscuro .menu-superior a{
+    color: #a1bfd8
+}
+
+body.modo-oscuro h2,
+body.modo-oscuro h3
+{
+    color: #a1bfd8;  
+}
+
+
+body.modo-oscuro p,
+body.modo-oscuro li{
+    color: #e0f2f1; 
+}
+
+body.modo-oscuro .menu-lateral a
+{
+    color: #a1bfd8;
+}
 
 body.modo-oscuro header,
 body.modo-oscuro footer,
@@ -532,10 +550,6 @@ body.modo-oscuro .menu-lateral {
     background-color: #1e1e1e;
 }
 
-body.modo-oscuro .menu-lateral a,
-body.modo-oscuro .menu-superior a{
-    color: #70d6ff;
-}
 
 body.modo-oscuro .descripcion,
 body.modo-oscuro .galeria,
