--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header {
 }
 
 .menu-superior a {
-    color: white; 
+    color: white;
     text-decoration: none;
     font-weight: bold;
 }
@@ -40,11 +40,25 @@ header {
 .hamburguesa {
     display: none;
     font-size: 24px;
-    background: none; 
+    background: none;
     border: none;
     cursor: pointer;
-    color: white; 
+    color: white;
 }
+
+/*Modificar cerrar y abrir el nuevo menú */
+.menu-lateral {
+    /* visible por defecto */
+    transition: transform 0.3s ease;
+}
+
+/* clase para ocultar el menú lateral */
+.menu-lateral.oculto {
+    transform: translateX(-100%);
+    /* o display:none, pero con transform queda mejor para animar */
+}
+
+/*Fin del código para abrir y cerrar */
 
 /* Contenedor general */
 .contenedor {
@@ -332,7 +346,8 @@ h3 {
 
 .proyecto h3 {
     margin-bottom: 0.3rem;
-    color: #2563eb;;
+    color: #2563eb;
+    ;
 }
 
 .proyecto p {
@@ -520,30 +535,28 @@ body.modo-oscuro {
     color: #f5f5f5;
 }
 
-body.modo-oscuro a{
+body.modo-oscuro a {
     color: #90e0ef;
 }
 
 
 body.modo-oscuro h1,
-body.modo-oscuro .menu-superior a{
+body.modo-oscuro .menu-superior a {
     color: #a1bfd8
 }
 
 body.modo-oscuro h2,
-body.modo-oscuro h3
-{
-    color: #a1bfd8;  
+body.modo-oscuro h3 {
+    color: #a1bfd8;
 }
 
 
 body.modo-oscuro p,
-body.modo-oscuro li{
-    color: #e0f2f1; 
+body.modo-oscuro li {
+    color: #e0f2f1;
 }
 
-body.modo-oscuro .menu-lateral a
-{
+body.modo-oscuro .menu-lateral a {
     color: #a1bfd8;
 }
 
@@ -586,7 +599,7 @@ body.modo-oscuro .perfil {
 }
 
 /* FORMULARIO en modo oscuro */
-body.modo-oscuro .contenido-principal-formulario{
+body.modo-oscuro .contenido-principal-formulario {
     background-color: #1e1e1e;
     color: #70d6ff;
     border: 1px solid #444;
@@ -601,14 +614,16 @@ body.modo-oscuro textarea {
     border: 1px solid #555;
 }
 
-body.modo-oscuro label{
+body.modo-oscuro label {
     color: #70d6ff;
 }
 
 /*Para modificar eñ boton*/
 body.modo-oscuro #enviar-formulario {
-    background-color: #70d6ff;   /* Color de fondo */
-    color: #1e1e1e;              /* Color del texto */
+    background-color: #70d6ff;
+    /* Color de fondo */
+    color: #1e1e1e;
+    /* Color del texto */
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
@@ -618,7 +633,8 @@ body.modo-oscuro #enviar-formulario {
 }
 
 body.modo-oscuro #enviar-formulario:hover {
-    background-color: #60a5fa;  /* Color al pasar el mouse */
+    background-color: #60a5fa;
+    /* Color al pasar el mouse */
 }
 
 
@@ -692,7 +708,7 @@ body.modo-oscuro .proyecto h3 {
     .menu-superior {
         display: none;
         flex-direction: column;
-        background-color:#2563eb;
+        background-color: #2563ebbf; 
         position: absolute;
         top: 60px;
         right: 0;
