--- a/style.css
+++ b/style.css
@@ -711,16 +711,11 @@ body.modo-oscuro .proyecto h3 {
         background-color: #e9edf1;  /*Color del menú hamburguesa*/
         color: #a1bfd8;    /*Color del texto hamburguesa*/
         font-family: 'Inter', sans-serif;
-        position: fixed;
-        top: 60px;
+        position: absolute;
+        top: 40px;
+        left: 0;
         right: 0;
         width: 100%;
-    }
-
-    .menu-superior ul {
-        flex-direction: column;
-        padding: 5%;
-        margin: 5%;
     }
 
     /*Animación cuando se pase el mouse*/
