--- a/style.css
+++ b/style.css
@@ -621,7 +621,7 @@ body.modo-oscuro label {
     color: #70d6ff;
 }
 
-/*Para modificar eñ boton*/
+/*Para modificar el boton*/
 body.modo-oscuro #enviar-formulario {
     background-color: #70d6ff;
     /* Color de fondo */
@@ -715,7 +715,7 @@ body.modo-oscuro .proyecto h3 {
         color: #a1bfd8;    /*Color del texto hamburguesa*/
         font-family: 'Inter', sans-serif;
         position: absolute;
-        top: 6px;
+        top: 50px;
         left: 0;
         right: 0;
         width: 100%;
@@ -729,7 +729,7 @@ body.modo-oscuro .proyecto h3 {
         /* Espaciado interno para el "rectángulo" */
         border-radius: 8px;
         /* Bordes redondeados */
-        transition: background-color 0.3s ease, color 0.3s ease;
+        transition: background-color 0.4s ease, color 0.3s ease;
     }
 
     #menu-superior ul li a:hover {
@@ -737,11 +737,6 @@ body.modo-oscuro .proyecto h3 {
         /* Fondo azul al pasar mouse */
         color: white;
         /* Texto blanco */
-    }
-
-    #menu-superior a {
-        text-decoration: none;
-        color: #2563eb;
     }
 
     .menu-superior.mostrar {
