--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
     color: white;
 }
 
+
 /* Menú por defecto */
 .menu-superior ul {
     display: flex;
@@ -570,7 +571,7 @@ body.modo-oscuro .proyectos {
 }
 
 body.modo-oscuro .menu-lateral,
-body.modo-oscuro .menu-superior{
+body.modo-oscuro .menu-superior {
     background-color: #1e1e1e;
 }
 
@@ -704,6 +705,11 @@ body.modo-oscuro .proyecto h3 {
 
 /* Responsive para móviles */
 @media (max-width: 768px) {
+    header {
+        position: relative;
+        z-index: 10;
+    }
+
     .hamburguesa {
         display: block;
     }
@@ -711,11 +717,13 @@ body.modo-oscuro .proyecto h3 {
     .menu-superior {
         display: none;
         flex-direction: column;
-        background-color: #e9edf1;  /*Color del menú hamburguesa*/
-        color: #a1bfd8;    /*Color del texto hamburguesa*/
+        background-color: #e9edf1;
+        /*Color del menú hamburguesa*/
+        color: #a1bfd8;
+        /*Color del texto hamburguesa*/
         font-family: 'Inter', sans-serif;
         position: absolute;
-        top: 6px;
+        top: 60px;
         left: 0;
         right: 0;
         width: 100%;
@@ -741,7 +749,7 @@ body.modo-oscuro .proyecto h3 {
 
     #menu-superior a {
         text-decoration: none;
-        color: #2563eb;
+        color: #70d6ff;
     }
 
     .menu-superior.mostrar {
