Modifique lo responsivo

--- a/style.css
+++ b/style.css
@@ -753,7 +753,7 @@ body.modo-oscuro .proyecto h3 {
 
     #menu-superior a {
         text-decoration: none;
-        color: #70d6ff;
+        color: #2563eb;
     }
 
     .menu-superior.mostrar {
