--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ header {
     color: white;
 }
 
+header h1 {
+    font-size: 2rem;
+    text-align: center;
+    flex: 1;
+    word-break: break-word;
+}
 
 /* Menú por defecto */
 .menu-superior ul {
@@ -546,7 +552,7 @@ body.modo-oscuro a {
 }
 
 
-body.modo-oscuro h1{
+body.modo-oscuro h1 {
     color: #a1bfd8
 }
 
@@ -561,22 +567,36 @@ body.modo-oscuro li {
     color: #e0f2f1;
 }
 
-body.modo-oscuro .menu-lateral a,
-body.modo-oscuro .menu-superior a {
-    color: #70d6ff;
-}
 
 body.modo-oscuro header,
-body.modo-oscuro footer,
-body.modo-oscuro .proyectos {
+body.modo-oscuro footer
+{
     background-color: #1e1e1e;
     color: #70d6ff;
 }
 
+/*Diseño de ambos menús en modo oscuro*/
 body.modo-oscuro .menu-lateral,
 body.modo-oscuro .menu-superior {
     background-color: #1e1e1e;
+    color: #70d6ff;
+    border-top: 1px solid #444;
+    /* Opcional para consistencia */
+    border-bottom: 1px solid #444;
 }
+
+body.modo-oscuro .menu-lateral a,
+body.modo-oscuro .menu-superior a {
+    color: #70d6ff;
+    text-decoration: none;
+}
+
+body.modo-oscuro .menu-lateral a:hover,
+body.modo-oscuro .menu-superior a:hover {
+    background-color: #2563eb;
+    color: #fff;
+}
+/*Fin del modo oscuro de ambos menú*/
 
 
 body.modo-oscuro .descripcion,
@@ -586,10 +606,6 @@ body.modo-oscuro .video-container {
     box-shadow: 0 2px 10px rgba(96, 165, 250, 0.3);
 }
 
-body.modo-oscuro .proyecto {
-    background-color: #2a2a2a;
-    border: 1px solid #444;
-}
 
 /*Modifica el color del boton en modo oscuro*/
 body.modo-oscuro #modo-toggle {
@@ -646,8 +662,10 @@ body.modo-oscuro #enviar-formulario:hover {
 
 
 /* PROYECTOS en modo oscuro */
+
 body.modo-oscuro .contenido-principal-Proyectos,
-body.modo-oscuro .proyectos {
+body.modo-oscuro .proyectos
+{
     background-color: #1e1e1e;
     color: #f5f5f5;
     box-shadow: 0 4px 15px rgba(96, 165, 250, 0.3);
@@ -665,6 +683,12 @@ body.modo-oscuro .proyecto h3 {
 
 /* Responsivo */
 @media (max-width: 768px) {
+
+    header h1 {
+        font-size: 1.5rem;
+        padding: 0.5rem 0;
+    }
+
     .contenedor {
         flex-direction: column;
     }
